--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "sunrise" # the available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
+site_theme               : "air" # the available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
 title                    : "Will Troske / PhD Candidate"
 title_separator          : "-"
 name                     : &name "Will Troske"
